# papaya-ai-challenge-08

./: .env.example  .gitignore  CHECKLIST.md  CHECK_RESULT.md  PLAN.md  README.md  pyproject.toml
generators/: discharge.py  lab.py  main.py  pdf_renderer.py  prescription.py  receipt.py
results/extractions/: discharge_01.json  discharge_02.json  discharge_03.json  lab_01.json  lab_02.json  prescription_01.json  prescription_02.json  receipt_01.json  receipt_02.json  receipt_03.json
scripts/: generate_results.py
src/: __init__.py
src/extractors/: base.py  classifier.py  discharge.py  lab.py  prescription.py  receipt.py
src/models/: base.py  discharge.py  lab.py  prescription.py  receipt.py
src/pipeline/: extractor.py  preprocessor.py
src/prompts/: classification.py  extraction.py
src/utils/: llm.py
src/validators/: __init__.py  amounts.py  base.py  confidence.py  dates.py  sums.py
tests/: conftest.py  test_artifacts.py  test_classifier.py  test_extractors.py  test_generate_results.py  test_models.py  test_openrouter_client.py  test_pipeline.py  test_preprocessor.py  test_validators.py
tests/expected/: discharge_01.json  discharge_02.json  discharge_03.json  lab_01.json  lab_02.json  prescription_01.json  prescription_02.json  receipt_01.json  receipt_02.json  receipt_03.json
